k8s/dingtalk-adapter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dingtalk-adapter
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dingtalk-adapter
  template:
    metadata:
      labels:
        app: dingtalk-adapter
    spec:
      containers:
      - name: adapter
        image: timonwong/prometheus-webhook-dingtalk:v1.4.0
        args:
        - --ding.profile=webhook1=https://oapi.dingtalk.com/robot/send?access_token=241128b8f64141a31a101994a6557c0486a0f71af3bb77c74fcda8941acbcd4f
        ports:
        - containerPort: 8060
---
apiVersion: v1
kind: Service
metadata:
  name: dingtalk-webhook-adapter
  namespace: monitoring
spec:
  selector:
    app: dingtalk-adapter
  ports:
  - port: 8060
    targetPort: 8060
