k8s/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask
  labels:
    app: flask
spec:
  selector:
    app: flask
  ports:
  - name: web
    port: 80
    targetPort: 5000
  type: ClusterIP
